Downgraded Java version to 8